@@ -1,188 +1,74 @@
-Red Hat JBoss Enterprise Application Platform (EAP) Quickstarts
-====================
-Summary: The quickstarts demonstrate Java EE 6 and a few additional technologies from the JBoss stack. They provide small, specific, working examples that can be used as a reference for your own project.
+## OPENSHIFT PROMOTING APPLICATION ACROSS ENVIRONMENTS
 
-Introduction
-------------
+![](pae.PNG)
 
-These quickstarts run on Red Hat JBoss Enterprise Application Platform 6.1 or later. We recommend using the JBoss EAP ZIP file. This version uses the correct dependencies and ensures you test and compile against your runtime environment. 
+### Application promotion means moving an application through various runtime environments, typically with an increasing level of maturity. For example, an application might start out in a development environment, then be promoted to a stage environment for further testing, before finally being promoted into a production environment. As changes are introduced in the application, again the changes will start in development and be promoted through stage and production
 
-Be sure to read this entire document before you attempt to work with the quickstarts. It contains the following information:
+Create two new projects
+```
+oc new-project dev
+oc new-project stage
+```
+if you are creating projects from admin user, provide edit access to the users who are going to use this project
+I am using two users 1) developer 2) tester
 
-* [Available Quickstarts](#available-quickstarts): List of the available quickstarts and details about each one.
+developer is using project dev & tester is using project stage
+oc adm policy add-role-to-user edit < username > -n < projectname >
+```
+oc adm policy add-role-to-user edit developer -n dev
+oc adm policy add-role-to-user edit tester -n stage
+```
 
-* [Suggested Approach to the Quickstarts](#suggested-approach-to-the-quickstarts): A suggested approach on how to work with the quickstarts.
+provide view access to user tester to dev project
 
-* [System Requirements](#system-requirements): List of software required to run the quickstarts.
+`oc adm policy add-role-to-user view tester -n dev`
 
-* [Configure Maven](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_MAVEN.md#configure-maven-to-build-and-deploy-the-quickstarts): How to configure the Maven repository for use by the quickstarts.
+provide image pull access to stage project from dev project, so it can pull images from dev project
 
-* [Run the Quickstarts](#run-the-quickstarts): General instructions for building, deploying, and running the quickstarts.
+`oc policy add-role-to-group system:image-puller system:serviceaccounts:stage -n dev`
 
-* [Run the Arquillian Tests](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/RUN_ARQUILLIAN_TESTS.md#run-the-arquillian-tests): How to run the Arquillian tests provided by some of the quickstarts.
+oc login to developer and create an application,
 
-* [Optional Components](#optional-components): How to install and configure optional components required by some of the quickstarts.
 
-* [Contributing Guide](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONTRIBUTING.md#jboss-developer-contributing-guide): This document contains information targeted for developers who want to contribute to JBoss developer projects.
+##### create app
 
-Use of EAP_HOME and JBOSS_HOME Variables
----------------------------------
 
-The quickstart README files use the *replaceable* value `EAP_HOME` to denote the path to the JBoss EAP 6 installation. When you encounter this value in a README file, be sure to replace it with the actual path to your JBoss EAP 6 installation. The installation path is described in detail here: [Use of EAP_HOME and JBOSS_HOME Variables](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/USE_OF_EAP_HOME.md#use-of-eap_home-and-jboss_home-variables).
+#### In this demo im using the TEMPLATE JBoss EAP 6.4 (no https) , git url is https://github.com/venatrix/jboss-eap-quickstarts.git  and the  application name is myapp
 
+After creating myapp application check the images streams from dev project and tag the image stream with the tag :promote
 
-Available Quickstarts
----------------------
+Get the imagestream
 
-All available quickstarts can be found here: <http://www.jboss.org/developer-materials/#!formats=jbossdeveloper_quickstart>. You can filter by the quickstart name, the product, and the technologies demonstrated by the quickstart. You can also limit the results based on skill level and date published. The resulting page provides a brief description of each matching quickstart, the skill level, and the technologies used. Click on the quickstart to see more detailed information about how to run it. Some quickstarts require deployment of other quickstarts. This information is noted in the `Prerequisites` section of the quickstart README file.
+`oc get is` 
 
-_Note_: Some of these quickstarts use the H2 database included with JBoss EAP 6. It is a lightweight, relational example datasource that is used for examples only. It is not robust or scalable, is not supported, and should NOT be used in a production environment!
+you can see a image stream with the name `myapp`
 
+describe the image stream
 
-[TOC-quickstart]
+`oc describe is myapp`
 
+copy the the imagestream name by copying the line starts with dokcer registry ip/ hostname.
 
-Suggested Approach to the Quickstarts
--------------------------------------
+`eg: 172.30.0.0:5000/dev/myapp@sha256:jdfnkjfne5wefef54ef5ef13f165f1`
 
-We suggest you approach the quickstarts as follows:
+tag the image stream with tag:promote
 
-* Regardless of your level of expertise, we suggest you start with the **helloworld** quickstart. It is the simplest example and is an easy way to prove your server is configured and started correctly.
-* If you are a beginner or new to JBoss, start with the quickstarts labeled **Beginner**, then try those marked as **Intermediate**. When you are comfortable with those, move on to the **Advanced** quickstarts.
-* Some quickstarts are based upon other quickstarts but have expanded capabilities and functionality. If a prerequisite quickstart is listed, be sure to deploy and test it before looking at the expanded version.
+```
+oc tag < image stream name > dev/myapp:promote
+eg: oc tag 72.30.0.0:5000/dev/myapp@sha256:jdfnkjfne5wefef54ef5ef13f165f1 dev/myapp:promote
+```
 
+now login to tester
+create application with the image:promote
 
-System Requirements
--------------------
+```
+oc login tester
+oc new-app dev/myapp:promote
+```
 
-The applications these projects produce are designed to be run on Red Hat JBoss Enterprise Application Platform 6.1 or later. 
+If you are updating your build in myapp - dev project , it will create a new image stream for the new build , if you want pass the update image to teh tester - stage project
 
-To run these quickstarts with the provided build scripts, you need the following:
+copy the updated imagesteam and the create tag :promote again
 
-1. Java 1.6, to run JBoss EAP and Maven. You can choose from the following:
-    * OpenJDK
-    * Oracle Java SE
-    * Oracle JRockit
-
-2. Maven 3.0.0 or newer, to build and deploy the examples
-    * If you have not yet installed Maven, see the [Maven Getting Started Guide](http://maven.apache.org/guides/getting-started/index.html) for details.
-    * If you have installed Maven, you can check the version by typing the following in a command prompt:
-
-            mvn --version 
-
-3. The JBoss EAP distribution ZIP.
-    * For information on how to install and run JBoss, see the [Red Hat JBoss Enterprise Application Platform Documentation](https://access.redhat.com/documentation/en-US/JBoss_Enterprise_Application_Platform/) _Getting Started Guide_ located on the Customer Portal.
-
-4. You can also use [JBoss Developer Studio or Eclipse](#use-jboss-developer-studio-or-eclipse-to-run-the-quickstarts) to run the quickstarts. 
-
-
-Run the Quickstarts
--------------------
-
-The root folder of each individual quickstart contains a README file with specific details on how to build and run the example. In most cases you do the following:
-
-* [Start the JBoss EAP Server](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/START_JBOSS_EAP.md#start-the-jboss-eap-server)
-* [Build and deploy the quickstarts](#build-and-deploy-the-quickstarts)
-
-           
-### Build and Deploy the Quickstarts
-
-See the README file in each individual quickstart folder for specific details and information on how to run and access the example. 
-
-_Note:_ If you do not configure the Maven settings as described here, [Configure Maven](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_MAVEN.md#configure-maven-to-build-and-deploy-the-quickstarts), you must pass the configuration setting on every Maven command as follows: ` -s QUICKSTART_HOME/settings.xml`
-
-
-#### Build the Quickstart Archive
-
-In most cases, you can use the following steps to build the application to test for compile errors or to view the contents of the archive. See the specific quickstart README file for complete details.
-
-1. Open a command prompt and navigate to the root directory of the quickstart you want to build.
-2. Use this command if you only want to build the archive, but not deploy it:
-   * If you have configured the Maven settings :
-
-            mvn clean install
-   * If you have NOT configured settings Maven settings:
-
-            mvn clean install -s QUICKSTART_HOME/settings.xml
-
-#### Build and Deploy the Quickstart Archive
-
-In most cases, you can use the following steps to build and deploy the application. See the specific quickstart README file for complete details.
-
-1. Make sure you start the JBoss EAP server as described in the quickstart README file.
-2. Open a command prompt and navigate to the root directory of the quickstart you want to run.
-3. Use this command to build and deploy the archive:
-
-   * If you have configured the Maven settings :
-
-            mvn clean install jboss-as:deploy
-   * If you have NOT configured the Maven settings :
-
-            mvn clean install jboss-as:deploy -s QUICKSTART_HOME/settings.xml
-
-#### Undeploy an Archive
-
-The command to undeploy the quickstart is simply: 
-
-        mvn jboss-as:undeploy
-
-
-### Verify the Quickstarts Build with One Command
--------------------------------------------------
-
-You can verify the quickstarts build using one command. However, quickstarts that have complex dependencies must be skipped. For example, the _jax-rs-client_ quickstart is a RESTEasy client that depends on the deployment of the _helloworld-rs_ quickstart. As noted above, the root `pom.xml` file defines a `complex-dependencies` profile to exclude these quickstarts from the root build process. 
-
-To build the quickstarts:
-
-1. Do not start the JBoss EAP server.
-2. Open a command prompt and navigate to the root directory of the quickstarts.
-3. Use this command to build the quickstarts that do not have complex dependencies:
-
-   * If you have configured the Maven settings :
-
-            mvn clean install '-Pdefault,!complex-dependencies'
-
-   * If you have NOT configured the Maven settings :
-
-            mvn clean install '-Pdefault,!complex-dependencies' -s QUICKSTART_HOME/settings.xml
-
-_Note_: If you see a `java.lang.OutOfMemoryError: PermGen space` error when you run this command, increase the memory by typing the following command for your operating system, then try the above command again.
-
-        For Linux:   export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
-        For Windows: SET MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
-
-
-### Undeploy the Deployed Quickstarts with One Command
-------------------------------------------------------
-
-To undeploy the quickstarts from the root of the quickstart folder, you must pass the argument `-fae` (fail at end) on the command line. This allows the command to continue past quickstarts that fail due to complex dependencies and quickstarts that only have Arquillian tests and do not deploy archives to the server.
-
-You can undeploy quickstarts using the following procedure:
-
-1. Start the JBoss EAP server.
-2. Open a command prompt and navigate to the root directory of the quickstarts.
-3. Use this command to undeploy any deployed quickstarts:
-
-            mvn jboss-as:undeploy -fae
-
-To undeploy any quickstarts that fail due to complex dependencies, follow the undeploy procedure described in the quickstart's README file.
-
-
-Use JBoss Developer Studio or Eclipse to Run the Quickstarts
-------------------------------------------------------------
-
-You can also deploy the quickstarts from Eclipse using JBoss tools. For more information on how to set up Maven and the JBoss tools, see the [Red Hat JBoss Enterprise Application Platform Documentation](https://access.redhat.com/documentation/en-US/JBoss_Enterprise_Application_Platform/) _Getting Started Guide_ and _Development Guide_ or [Get Started with JBoss Developer Studio](http://www.jboss.org/products/devstudio/get-started/ "Get Started with JBoss Developer Studio").
-
-
-Optional Components
--------------------
-The following components are needed for only a small subset of the quickstarts. Do not install or configure them unless the quickstart requires it.
-
-* [Create Users Required by the Quickstarts](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CREATE_USERS.md#create-users-required-by-the-quickstarts): Add a Management or Application user for the quickstarts that run in a secured mode.
-
-* [Configure the PostgreSQL Database for Use with the Quickstarts](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_POSTGRESQL.md#configure-the-postgresql-database-for-use-with-the-quickstarts): The PostgreSQL database is used for the distributed transaction quickstarts.
-
-* [Configure Byteman for Use with the Quickstarts](https://github.com/jboss-developer/jboss-developer-shared-resources/blob/master/guides/CONFIGURE_BYTEMAN.md#configure-byteman-for-use-with-the-quickstarts): This tool is used to demonstrate crash recovery for distributed transaction quickstarts.
-
-
+once the imgaestream with tag:promote is updated the stage project will start a new build automatically.
 
